random pirate update stuff